Wrapping layout with div component to stop propagation for global key down event that has been used by window in renderer part

--- a/packages/builder-core/src/components/layout/style.scss
+++ b/packages/builder-core/src/components/layout/style.scss
@@ -1,3 +1,11 @@
 * {
 	box-sizing: border-box;
 }
+
+.builder-core-layout {
+	position: relative;
+	display: flex;
+	width: 100%;
+	height: 100%;
+	padding-left: 55px;
+}
